feat(addon-gating): move @RequiresAddon from services to controllers
- Annotate all gated endpoints at the controller layer (7 controllers)
- Remove @RequiresAddon from service methods — business logic is now
  decoupled from subscription enforcement
- Fix cascade issue: DashboardService.get() called ApprovalService
  internally; service-level gating with different addon codes caused
  403 when the outer caller had DASHBOARD but not APPROVALS
- Update 11 integration tests: add subscription setup in @BeforeEach,
  fix FK teardown order, update expectations now that controller-level
  checks fire before service logic